tests/NormalTests/paczka2/big_fuzzy/81437103.err
Error in line 1: xxIG9J67 S788 98,8
Error in line 9: A229 A61 69,8
Error in line 6: BUN511DvHQ7 S788 49,3
Error in line 15: JLpY2GNN A229 12,3
Error in line 21: JLpY2GNN A61 38,9
Error in line 23: xxIG9J67 A61 6,8
Error in line 19: BUN511DvHQ7 A143 1,2
Error in line 47: cLIZPx19DuR A61 31,2
Error in line 45: JLpY2GNN A61 143,1
Error in line 68: cLIZPx19DuR S788 52,7
Error in line 71: 39YYOfVGAw S788 17,3
Error in line 67: BUN511DvHQ7 A229 29,7
Error in line 72: 39YYOfVGAw A61 5,2
Error in line 75: 39YYOfVGAw A143 15,4
Error in line 40: rrZuB A14 186,1
Error in line 80: rrZuB A229 8,1
Error in line 85: xxIG9J67 A229 35,3
Error in line 87: A229 A143 29,3
Error in line 97: A229 S788 53,2
Error in line 94: 39YYOfVGAw A61 79,6
Error in line 104: rrZuB A143 27,1
Error in line 109: JLpY2GNN A61 60,5
Error in line 114: JLpY2GNN S788 93,7
Error in line 100: A229 A143 12,6
Error in line 127: 39YYOfVGAw A229 42,4
Error in line 122: JLpY2GNN A61 87,0
Error in line 130: BUN511DvHQ7 A61 154,7
Error in line 138: BUN511DvHQ7 S788 84,2
Error in line 139: BUN511DvHQ7 A61 25,8
Error in line 155: A229 A61 42,53
Error in line 158: JLpY2GNN A143 22,6
Error in line 161: cLIZPx19DuR,A143,282,6
Error in line 156: xxIG9J67 A229 88,1
Error in line 163: A229 A61 -3,9
Error in line 162: xxIG9J67 A61 54,1
Error in line 167: cLIZPx19DuR S788 63,5
Error in line 179: JLpY2GNN S788 13,1
Error in line 185: rrZuB A143 90,9
Error in line 210: n9YYOfVGAw A14n 92,5
Error in line 212: xxIG9J67 A229 53,8
Error in line 216: cLIZPx19DuR S788 0,4
Error in line 209: BUN511DvHQ7 A61 3,1
Error in line 229: BUN511DvHQ7 A229 25,7
Error in line 243: A229 A229 16,1
